[gd_scene load_steps=20 format=2]

[ext_resource path="res://res/theme/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://core/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://core/World/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/Game/GUI/GUI.gd" type="Script" id=4]
[ext_resource path="res://core/Game/GUI/Messageboard.gd" type="Script" id=5]
[ext_resource path="res://core/Game/Char.gd" type="Script" id=6]
[ext_resource path="res://core/Game/Inventory/InventoryMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://graphics/misc/cursor_green.png" type="Texture" id=8]
[ext_resource path="res://graphics/misc/cursor.png" type="Texture" id=9]
[ext_resource path="res://core/Game/Summoner.gd" type="Script" id=10]
[ext_resource path="res://core/Game/ExaminePanel.gd" type="Script" id=11]
[ext_resource path="res://fonts/VerilySerifMono.otf" type="DynamicFontData" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.617188, 0.166351, 0.166351, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.261719, 0.0959241, 0.063385, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.166351, 0.331893, 0.617188, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.126228, 0.110779, 0.234375, 1 )

[sub_resource type="DynamicFont" id=5]
size = 0

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=7]
size = 24
use_mipmaps = true
font_data = ExtResource( 12 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
mouse_filter = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Frame" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="View" type="VBoxContainer" parent="Frame"]
margin_right = 692.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Port" type="ViewportContainer" parent="Frame/View"]
margin_right = 692.0
margin_bottom = 488.0
mouse_filter = 1
mouse_default_cursor_shape = 3
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Frame/View/Port"]
size = Vector2( 692, 488 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="World" parent="Frame/View/Port/Viewport" instance=ExtResource( 3 )]

[node name="GUI" type="Control" parent="Frame/View"]
margin_top = 492.0
margin_right = 692.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="Messageboard" type="RichTextLabel" parent="Frame/View/GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
script = ExtResource( 5 )

[node name="Char" type="VBoxContainer" parent="Frame"]
margin_left = 696.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 0
size_flags_vertical = 5
script = ExtResource( 6 )

[node name="Top" type="Control" parent="Frame/Char"]
margin_right = 320.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameVersion" type="Label" parent="Frame/Char/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Realms of Todog: v 0.0.0"
align = 1

[node name="HSeparator" type="HSeparator" parent="Frame/Char"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 106.0

[node name="Name" type="Label" parent="Frame/Char"]
margin_top = 110.0
margin_right = 320.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.648438, 0.429297, 0.362213, 1 )
text = "X Ray Cat"

[node name="Genus" type="Label" parent="Frame/Char"]
margin_top = 131.0
margin_right = 320.0
margin_bottom = 148.0
custom_colors/font_color = Color( 0.527344, 0.302811, 0.302811, 1 )
text = "Got Super Powers"

[node name="HP" type="HBoxContainer" parent="Frame/Char"]
margin_top = 152.0
margin_right = 320.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="Frame/Char/HP"]
margin_right = 66.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "HP"
align = 1

[node name="Value" type="HBoxContainer" parent="Frame/Char/HP"]
margin_left = 70.0
margin_right = 118.0
margin_bottom = 17.0

[node name="Current" type="Label" parent="Frame/Char/HP/Value"]
margin_right = 16.0
margin_bottom = 17.0
text = "10"

[node name="Slash" type="Label" parent="Frame/Char/HP/Value"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 17.0
text = "/"

[node name="Max" type="Label" parent="Frame/Char/HP/Value"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 17.0
text = "10"

[node name="Bar" type="ProgressBar" parent="Frame/Char/HP"]
margin_left = 122.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="MP" type="HBoxContainer" parent="Frame/Char"]
visible = false
margin_top = 163.0
margin_right = 320.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="Frame/Char/MP"]
margin_right = 68.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "MP"
align = 1

[node name="Value" type="Label" parent="Frame/Char/MP"]
margin_left = 72.0
margin_right = 112.0
margin_bottom = 17.0
text = "10/10"

[node name="Bar" type="ProgressBar" parent="Frame/Char/MP"]
margin_left = 116.0
margin_right = 320.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Stats" type="HBoxContainer" parent="Frame/Char"]
margin_top = 173.0
margin_right = 320.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Left" type="VBoxContainer" parent="Frame/Char/Stats"]
margin_right = 158.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Level" type="HBoxContainer" parent="Frame/Char/Stats/Left"]
margin_right = 158.0
margin_bottom = 17.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Left/Level"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Level"
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Left/Level"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "1"

[node name="Strength" type="HBoxContainer" parent="Frame/Char/Stats/Left"]
margin_top = 21.0
margin_right = 158.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Left/Strength"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Str"
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Left/Strength"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "1"

[node name="Dexterity" type="HBoxContainer" parent="Frame/Char/Stats/Left"]
margin_top = 42.0
margin_right = 158.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Left/Dexterity"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Dex"
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Left/Dexterity"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "1"

[node name="Intelligence" type="HBoxContainer" parent="Frame/Char/Stats/Left"]
margin_top = 63.0
margin_right = 158.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Left/Intelligence"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Int"
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Left/Intelligence"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "1"

[node name="Right" type="VBoxContainer" parent="Frame/Char/Stats"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Experience" type="HBoxContainer" parent="Frame/Char/Stats/Right"]
margin_right = 158.0
margin_bottom = 17.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Right/Experience"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Exp."
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Right/Experience"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "1"

[node name="Location" type="HBoxContainer" parent="Frame/Char/Stats/Right"]
margin_top = 21.0
margin_right = 158.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="Frame/Char/Stats/Right/Location"]
margin_right = 77.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "Location"
align = 2

[node name="Value" type="Label" parent="Frame/Char/Stats/Right/Location"]
margin_left = 81.0
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.90625, 0.873754, 0.817749, 1 )
text = "D:1"

[node name="Condition" type="HBoxContainer" parent="Frame/Char/Stats/Right"]
margin_top = 42.0
margin_right = 158.0
margin_bottom = 59.0

[node name="Value" type="Label" parent="Frame/Char/Stats/Right/Condition"]
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.244168, 0.933594, 0.123993, 1 )
text = "GOOD"
align = 1

[node name="Hunger" type="HBoxContainer" parent="Frame/Char/Stats/Right"]
margin_top = 63.0
margin_right = 158.0
margin_bottom = 80.0

[node name="Value" type="Label" parent="Frame/Char/Stats/Right/Hunger"]
margin_right = 158.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.244168, 0.933594, 0.123993, 1 )
text = "Full"
align = 1

[node name="Inventory" type="Control" parent="Frame/Char"]
margin_top = 257.0
margin_right = 320.0
margin_bottom = 385.0
rect_min_size = Vector2( 320, 128 )
mouse_default_cursor_shape = 3
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="InventoryMap" parent="Frame/Char/Inventory" instance=ExtResource( 7 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0 )

[node name="Selected" type="Sprite" parent="Frame/Char/Inventory"]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="Cursor" type="Sprite" parent="Frame/Char/Inventory"]
visible = false
texture = ExtResource( 9 )
centered = false

[node name="SelectedItem" type="Label" parent="Frame/Char"]
margin_top = 389.0
margin_right = 320.0
margin_bottom = 406.0

[node name="InventoryActions" type="GridContainer" parent="Frame/Char"]
margin_top = 410.0
margin_right = 320.0
margin_bottom = 460.0
columns = 3

[node name="Examine" type="Button" parent="Frame/Char/InventoryActions"]
margin_right = 104.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Exam."

[node name="Drop" type="Button" parent="Frame/Char/InventoryActions"]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Drop"

[node name="Throw" type="Button" parent="Frame/Char/InventoryActions"]
margin_left = 216.0
margin_right = 320.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Throw"

[node name="Use" type="Button" parent="Frame/Char/InventoryActions"]
margin_top = 27.0
margin_right = 104.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Use"

[node name="Equip" type="Button" parent="Frame/Char/InventoryActions"]
margin_left = 108.0
margin_top = 27.0
margin_right = 212.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Equip"

[node name="Remove" type="Button" parent="Frame/Char/InventoryActions"]
margin_left = 216.0
margin_top = 27.0
margin_right = 320.0
margin_bottom = 50.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Remove"

[node name="HSeparator2" type="HSeparator" parent="Frame/Char"]
margin_top = 464.0
margin_right = 320.0
margin_bottom = 468.0

[node name="Time" type="Label" parent="Frame/Char"]
margin_top = 472.0
margin_right = 320.0
margin_bottom = 489.0
text = "beef jerky time"

[node name="Bottom" type="Control" parent="Frame/Char"]
margin_top = 493.0
margin_right = 320.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GodModeSwitch" type="CheckButton" parent="Frame/Char/Bottom"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true
text = "God Mode"

[node name="SummonerSwitch" type="CheckButton" parent="Frame/Char/Bottom"]
visible = false
margin_left = 10.0
margin_top = 31.0
margin_right = 154.0
margin_bottom = 71.0
text = "Summoner"

[node name="a" type="Label" parent="Frame/Char/Bottom"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.625, 0.518322, 0.334473, 1 )
text = "press F1 for help!"
align = 1
valign = 2

[node name="Summoner" type="PanelContainer" parent="."]
visible = false
margin_left = 16.0
margin_top = 40.0
margin_right = 269.0
margin_bottom = 487.0
script = ExtResource( 10 )

[node name="Box" type="VBoxContainer" parent="Summoner"]
margin_left = 7.0
margin_top = 7.0
margin_right = 246.0
margin_bottom = 440.0

[node name="Label" type="Label" parent="Summoner/Box"]
margin_right = 239.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 5 )
text = "The Summoner!"

[node name="Tree" type="Tree" parent="Summoner/Box"]
margin_top = 21.0
margin_right = 239.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="HBoxContainer" parent="Summoner/Box"]
margin_top = 410.0
margin_right = 239.0
margin_bottom = 433.0
custom_constants/separation = 32
alignment = 1

[node name="Spawn" type="Button" parent="Summoner/Box/Options"]
margin_left = 7.0
margin_right = 59.0
margin_bottom = 23.0
text = "Spawn"

[node name="Hide" type="Button" parent="Summoner/Box/Options"]
margin_left = 91.0
margin_right = 231.0
margin_bottom = 23.0
text = "Hide this window"

[node name="ExaminePanel" type="PopupPanel" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.5
margin_top = -212.5
margin_right = 246.5
margin_bottom = 212.5
custom_styles/panel = SubResource( 6 )
script = ExtResource( 11 )

[node name="Box" type="VBoxContainer" parent="ExaminePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="ExaminePanel/Box"]
margin_right = 485.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.792969, 0.572705, 0.411972, 1 )
text = "A Thing"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="ExaminePanel/Box"]
margin_top = 33.0
margin_right = 485.0
margin_bottom = 37.0

[node name="Content" type="RichTextLabel" parent="ExaminePanel/Box"]
margin_top = 41.0
margin_right = 485.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "This is some test text.
This block will be filled with some crap telling you all the crappy things about the crap you find in this crappy dungeon.

[b]Kerplah![/b]"
text = "This is some test text.
This block will be filled with some crap telling you all the crappy things about the crap you find in this crappy dungeon.

Kerplah!"

[node name="DismissLabel" type="Label" parent="ExaminePanel/Box"]
margin_top = 400.0
margin_right = 485.0
margin_bottom = 417.0
text = "press any key or click anywhere to continue!"
align = 1

[node name="HelpPanel" type="PopupPanel" parent="."]
anchor_bottom = 1.0
margin_right = 455.0
margin_bottom = -4.0

[node name="Box" type="VBoxContainer" parent="HelpPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Title" type="Label" parent="HelpPanel/Box"]
margin_right = 439.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.792969, 0.572705, 0.411972, 1 )
text = "Help!"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="HelpPanel/Box"]
margin_top = 33.0
margin_right = 439.0
margin_bottom = 551.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Movement:

You may move one tile at a time in any of the eight directions.  These controls are bound to both the keypad (\"right-handed\") or left end of the keyboard (\"left-handed\")  

[img]res://graphics/misc/help/dirgraph2.png[/img] -or- [img]res://graphics/misc/help/dirgraph1.png[/img]



Other Actions:
KP5 or s -- Stand still for 5 seconds
KP0 or g -- Grab an object at your feet

Other Other Actions:
F1 -- Bring up this menu
ESC -- Bring up the Game Menu(TBA)
alt+F4 -- RageQuit

Combat:
The dungeon is filled with many Nasty Things. Move into a tile containing a monster to attack it with your weapon, or your fists if you're not holding one. 
Your Hitpoints are shown on the right side of the screen. The general damage level of you and the monsters are shown in small bars on the map.  
Aside from that, the general idea is to get the other guy to run out of HP before you do!

Your HP will regenerate slowly over time. Some items you find can also restore your HP.  

Using Items:
The things you pick up from the dungeon can be used in a variety of ways. These options are located below the inventory as a series of buttons. Click on an item in your inventory to select it, then select an action. Only certain items can be used in certain ways, and some items will disappear when used, so think before you act!
All items can be Examined and Dropped (except cursed items..but there are no cursed items in the game, yet...or are there?!?)

Time:  
The game proceeds at the player's pace. The game will effectively pause itself until the player (that's you) performs an action which takes a certain amount of time. Everything else will then act with the same amount of time before it is your turn again.  





Good luck down there!"
text = "Movement:

You may move one tile at a time in any of the eight directions.  These controls are bound to both the keypad (\"right-handed\") or left end of the keyboard (\"left-handed\")  

 -or- 



Other Actions:
KP5 or s -- Stand still for 5 seconds
KP0 or g -- Grab an object at your feet

Other Other Actions:
F1 -- Bring up this menu
ESC -- Bring up the Game Menu(TBA)
alt+F4 -- RageQuit

Combat:
The dungeon is filled with many Nasty Things. Move into a tile containing a monster to attack it with your weapon, or your fists if you're not holding one. 
Your Hitpoints are shown on the right side of the screen. The general damage level of you and the monsters are shown in small bars on the map.  
Aside from that, the general idea is to get the other guy to run out of HP before you do!

Your HP will regenerate slowly over time. Some items you find can also restore your HP.  

Using Items:
The things you pick up from the dungeon can be used in a variety of ways. These options are located below the inventory as a series of buttons. Click on an item in your inventory to select it, then select an action. Only certain items can be used in certain ways, and some items will disappear when used, so think before you act!
All items can be Examined and Dropped (except cursed items..but there are no cursed items in the game, yet...or are there?!?)

Time:  
The game proceeds at the player's pace. The game will effectively pause itself until the player (that's you) performs an action which takes a certain amount of time. Everything else will then act with the same amount of time before it is your turn again.  





Good luck down there!"

[node name="Label" type="Label" parent="HelpPanel/Box"]
margin_top = 555.0
margin_right = 439.0
margin_bottom = 572.0
text = "Click outside this window to dismiss!"
align = 1
[connection signal="gui_input" from="Frame/View/Port" to="Frame/View/Port/Viewport/World" method="_on_Port_gui_input"]
[connection signal="mouse_exited" from="Frame/View/Port" to="Frame/View/Port/Viewport/World" method="_on_Port_mouse_exited"]
[connection signal="game_time_changed" from="Frame/View/Port/Viewport/World" to="Frame/Char" method="_on_World_game_time_changed"]
[connection signal="gui_input" from="Frame/Char/Inventory" to="Frame/Char/Inventory/InventoryMap" method="_on_Inventory_gui_input"]
[connection signal="mouse_exited" from="Frame/Char/Inventory" to="Frame/Char/Inventory/InventoryMap" method="_on_Inventory_mouse_exited"]
[connection signal="item_selected" from="Frame/Char/Inventory/InventoryMap" to="Frame/Char" method="_on_InventoryMap_item_selected"]
[connection signal="toggled" from="Frame/Char/Bottom/GodModeSwitch" to="." method="_on_GodModeSwitch_toggled"]
[connection signal="toggled" from="Frame/Char/Bottom/SummonerSwitch" to="." method="_on_SummonerSwitch_toggled"]
[connection signal="pressed" from="Summoner/Box/Options/Spawn" to="Summoner" method="_on_Spawn_pressed"]
[connection signal="about_to_show" from="ExaminePanel" to="ExaminePanel" method="_on_ExaminePanel_about_to_show"]
[connection signal="gui_input" from="ExaminePanel" to="ExaminePanel" method="_on_ExaminePanel_gui_input"]
[connection signal="popup_hide" from="ExaminePanel" to="ExaminePanel" method="_on_ExaminePanel_popup_hide"]
